<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/data_distributing">
        <menu>
            <item android:title="@string/world"
                android:id="@+id/detailWorldFragment"
                android:icon="@drawable/ic_public"/>

            <item android:title="@string/indonesia"
                android:id="@+id/detailIndonesiaFragment"
                android:icon="@drawable/ic_location"/>
        </menu>
    </item>

    <item
        android:title="@string/free_rapid_test"
        android:id="@+id/serviceFragment"
        android:icon="@drawable/ic_adb"/>

    <item android:title="@string/education"
        android:id="@+id/educationFragment"
        android:icon="@drawable/ic_folder"/>
</menu>