<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/servicesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/servicesHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="0dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/stroke_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                app:srcCompat="@drawable/rapid_test_bg"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_rapid_test"
                    android:textAppearance="?attr/textAppearanceHeadline6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/services_description"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:maxLines="3"
                    android:textColor="?android:attr/textColorSecondary"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonServices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    style="?attr/borderlessButtonStyle"/>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/introductionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/education"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardService"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/stroke_color"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introductionText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                app:srcCompat="@drawable/pengantar"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education_intro"
                    android:textAppearance="?attr/textAppearanceHeadline6"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/what_you_can_do"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/desc_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_marginStart="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_more_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see"
                    style="?attr/borderlessButtonStyle"/>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contact1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_person1"
            style="@style/Widget.MaterialComponents.Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contact2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_person2"
            style="@style/Widget.MaterialComponents.Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contact3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_person3"
            style="@style/Widget.MaterialComponents.Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contact4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_person4"
            style="@style/Widget.MaterialComponents.Button"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>